# relativistic-spacecraft-orbits

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  TASKLIST.md  changes  pyproject.toml  scaffold.ps1  units.py  validation_cases.yaml  validation_cases_.yaml
docs/: RevisaoTecnica.md  conventions.md
requisitos/: reqs.md
scripts/: plot_newton_suite.py  plot_schwarzschild_suite.py  run_all.ps1
src/relorbit_py/: __init__.py  animate.py  cases.py  cases.yaml  plots.py  plots_time.py  simulate.py  units.py  validate.py  validate_helpers.py  validate_models.py
src_cpp/bindings/: pybind_module.cpp
src_cpp/include/relorbit/: api.hpp  types.hpp
src_cpp/include/relorbit/models/: newton.hpp  schwarzschild_equatorial.hpp
src_cpp/lib/: api.cpp  schwarzschild_equatorial.cpp
